--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- About Me Section -->
       
         <div class="video-container ">
-          <video autoplay muted loop id="myVideo">
+          <video autoplay muted loop>
             <source src="./assets/video/Red and Black Modern Opening Profile Youtube Intro Video.mp4">
           </video>
          </div>
@@ -85,8 +85,8 @@
           <div class="card h-100">
             <img src="./assets/images/aji.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Aji Bae's</h5>
+              <p class="card-text">Aji Bae's Fashion Designs. Express yourself with fashion and laughter.</p>
             </div>
           </div>
         </div>
@@ -94,8 +94,8 @@
           <div class="card h-100">
             <img src="./assets/images/asiedu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Aseidu Beatrice</h5>
+              <p class="card-text">Happy  birthday to the most beautiful in the entire world. No matter you always look young and beautiful. </p>
             </div>
           </div>
         </div>
@@ -103,8 +103,8 @@
           <div class="card h-100">
             <img src="./assets/images/bigels.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Bigels</h5>
+              <p class="card-text">Bigels Shoes and Bags. Carry yourself with confidense</p>
             </div>
           </div>
         </div>
@@ -115,8 +115,8 @@
           <div class="card h-100">
             <img src="./assets/images/book.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Flashy</h5>
+              <p class="card-text">University of Education, Winnneba. Graduation.</p>
             </div>
           </div>
         </div>
@@ -124,8 +124,8 @@
           <div class="card h-100">
             <img src="./assets/images/book1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Flashy</h5>
+              <p class="card-text">University of Education, Winnneba. Graduation.</p>
             </div>
           </div>
         </div>
@@ -133,8 +133,8 @@
           <div class="card h-100">
             <img src="./assets/images/charity.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Charity Work</h5>
+              <p class="card-text">Co-operate Charity day with Cole Consultant.</p>
             </div>
           </div>
         </div>
@@ -145,8 +145,8 @@
           <div class="card h-100">
             <img src="./assets/images/charity1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Charity Work</h5>
+              <p class="card-text">Co-operate Charity day with Cole Consultant.</p>
             </div>
           </div>
         </div>
@@ -154,8 +154,8 @@
           <div class="card h-100">
             <img src="./assets/images/cole.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Charity Work</h5>
+              <p class="card-text">Co-operate Charity day with Cole Consultant</p>
             </div>
           </div>
         </div>
@@ -163,8 +163,8 @@
           <div class="card h-100">
             <img src="./assets/images/cole1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Charity</h5>
+              <p class="card-text">Co-operate Charity day with Cole Consultant</p>
             </div>
           </div>
         </div>
@@ -175,8 +175,8 @@
           <div class="card h-100">
             <img src="./assets/images/collections.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Jokenzy</h5>
+              <p class="card-text">Jokenzy's collections. Pay less, stay fashion</p>
             </div>
           </div>
         </div>
@@ -184,8 +184,8 @@
           <div class="card h-100">
             <img src="./assets/images/daily.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Dily's Penelope</h5>
+              <p class="card-text">We love to create, thats our trade-mark</p>
             </div>
           </div>
         </div>
@@ -193,8 +193,8 @@
           <div class="card h-100">
             <img src="./assets/images/daily1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Dily's Penelope</h5>
+              <p class="card-text">We love to create, thats our trade-mark</p>
             </div>
           </div>
         </div>
@@ -205,8 +205,8 @@
           <div class="card h-100">
             <img src="./assets/images/daniel.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Conference</h5>
+              <p class="card-text">Lets equip the Saints</p>
             </div>
           </div>
         </div>
@@ -214,8 +214,8 @@
           <div class="card h-100">
             <img src="./assets/images/glam.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Broken but Useful</h5>
+              <p class="card-text">Glam Foundation</p>
             </div>
           </div>
         </div>
@@ -223,8 +223,8 @@
           <div class="card h-100">
             <img src="./assets/images/jersey.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Jokenzy's Jersey</h5>
+              <p class="card-text">Quality is our priority</p>
             </div>
           </div>
         </div>
@@ -235,8 +235,8 @@
           <div class="card h-100">
             <img src="./assets/images/march.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">New month</h5>
+              <p class="card-text">May God keep you safe from all evil this new month, strenghen you in your weakness, bless, and favor you in all your endeavors.</p>
             </div>
           </div>
         </div>
@@ -244,8 +244,8 @@
           <div class="card h-100">
             <img src="./assets/images/nurse.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Admission</h5>
+              <p class="card-text">Seeking the opportunity to attend a nursing training college</p>
             </div>
           </div>
         </div>
@@ -253,8 +253,8 @@
           <div class="card h-100">
             <img src="./assets/images/shirt.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Shirt Designs</h5>
+              <p class="card-text">You want to design your shirt? look no further</p>
             </div>
           </div>
         </div>
@@ -265,8 +265,8 @@
           <div class="card h-100">
             <img src="./assets/images/summit.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Summit</h5>
+              <p class="card-text">Destiny summit, Rise and conquer: unleashing your inner warrior.</p>
             </div>
           </div>
         </div>
@@ -274,8 +274,8 @@
           <div class="card h-100">
             <img src="./assets/images/tour.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Tour</h5>
+              <p class="card-text">Do not ever tour without pictures. They are memories to your future</p>
             </div>
           </div>
         </div>
@@ -283,8 +283,8 @@
           <div class="card h-100">
             <img src="./assets/images/tour1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">City</h5>
+              <p class="card-text">Do not ever tour without pictures. They are memories to your future</p>
             </div>
           </div>
         </div>
@@ -295,8 +295,8 @@
           <div class="card h-100">
             <img src="./assets/images/visit.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Christ Charity Doundation</h5>
+              <p class="card-text">Education  on teenage pregancy and mentrual</p>
             </div>
           </div>
         </div>
@@ -304,8 +304,8 @@
           <div class="card h-100">
             <img src="./assets/images/visit1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Christ Charity Doundation</h5>
+              <p class="card-text">Education  on teenage pregancy and mentrual. The Gospel</p>
             </div>
           </div>
         </div>
@@ -313,8 +313,8 @@
           <div class="card h-100">
             <img src="./assets/images/visit2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">Christ Charity Doundation</h5>
+              <p class="card-text">Education  on teenage pregancy and mentrual. The Gospel</p>
             </div>
           </div>
         </div>
