--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                Tell A Tale Graphics is a game-changer! Their design skills are top-notch, and their attention to detail is unparalleled.
               </div>
             </div>
           </div>
@@ -344,7 +344,8 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                I've had the pleasure of working with Tell A Tale Graphics on several design projects, and I can confidently say they're one of the most talented and professional designers I've ever met.
+
               </div>
             </div>
           </div>
@@ -356,11 +357,13 @@
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                I've worked with many designers, but Tell A Tale Graphics stands out from the crowd. Their creativity, work ethic, and communication skills are exceptional.
               </div>
             </div>
           </div>
+          
       </div>
+      
      </div>
      <!-- Contact form -->
       <section class="container mt-5" id="contact">
